; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_ftp.c_ftp_endofresp.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_ftp.c_ftp_endofresp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { i32 }

@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.connectdata*, i8*, i64, i32*)* @ftp_endofresp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ftp_endofresp(%struct.connectdata* %0, i8* %1, i64 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.connectdata*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  store %struct.connectdata* %0, %struct.connectdata** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32* %3, i32** %9, align 8
  %10 = load %struct.connectdata*, %struct.connectdata** %6, align 8
  %11 = load i64, i64* %8, align 8
  %12 = icmp ugt i64 %11, 3
  br i1 %12, label %13, label %23

13:                                               ; preds = %4
  %14 = load i8*, i8** %7, align 8
  %15 = call i64 @LASTLINE(i8* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %23

17:                                               ; preds = %13
  %18 = load i8*, i8** %7, align 8
  %19 = call i32 @strtol(i8* %18, i32* null, i32 10)
  %20 = call i32 @curlx_sltosi(i32 %19)
  %21 = load i32*, i32** %9, align 8
  store i32 %20, i32* %21, align 4
  %22 = load i32, i32* @TRUE, align 4
  store i32 %22, i32* %5, align 4
  br label %25

23:                                               ; preds = %13, %4
  %24 = load i32, i32* @FALSE, align 4
  store i32 %24, i32* %5, align 4
  br label %25

25:                                               ; preds = %23, %17
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local i64 @LASTLINE(i8*) #1

declare dso_local i32 @curlx_sltosi(i32) #1

declare dso_local i32 @strtol(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
